start bro 1.5 better

--- a/manager/runbro-1.5
+++ b/manager/runbro-1.5
@@ -12,8 +12,16 @@ fi
 
 chown nobody . *
 mv main.bro trybro.bro
+
+cat <<EOF >> start.bro
+const use_dpd = T;
+redef local_nets += { 0.0.0.0/0 };
+@load brolite
+redef log_rotate_interval = 0secs;
+EOF
+
 su -s /bin/sh nobody -c \
-    "/usr/bin/timeout -k 2 15 /bro/bin/bro -C $opts brolite ./trybro.bro 'local_nets += { 0.0.0.0/0 }' 'log_rotate_interval = 0secs' > stdout.log 2> stderr.log"
+    "/usr/bin/timeout -k 2 15 /bro/bin/bro -C $opts start.bro ./trybro.bro > stdout.log 2> stderr.log"
 
 #remove harmless message
 grep -v 'NB-DNS' stderr.log > tmp.log
