--- a/manager/runbro-1.5
+++ b/manager/runbro-1.5
@@ -12,17 +12,17 @@ fi
 
 mv main.bro trybro.bro
 
-cat <<EOF >> start.bro
+cat <<EOF > trybro_pre.bro
 const use_dpd = T;
-redef local_nets += { 0.0.0.0/0 };
 @load brolite
 redef log_rotate_interval = 0secs;
+redef local_nets += { 0.0.0.0/0 };
 EOF
 
 chown nobody . *
 
 su -s /bin/sh nobody -c \
-    "/usr/bin/timeout -k 2 15 /bro/bin/bro -C $opts start.bro ./trybro.bro > stdout.log 2> stderr.log"
+    "/usr/bin/timeout -k 2 15 /bro/bin/bro -C $opts trybro_pre.bro ./trybro.bro > stdout.log 2> stderr.log"
 
 #remove harmless message
 grep -v 'NB-DNS' stderr.log > tmp.log
