--- a/manager/runbro-1.5
+++ b/manager/runbro-1.5
@@ -22,7 +22,7 @@ EOF
 chown nobody . *
 
 su -s /bin/sh nobody -c \
-    "/usr/bin/timeout -k 2 15 /bro/bin/bro -C $opts trybro_pre.bro ./trybro.bro > stdout.log 2> stderr.log"
+    "/usr/bin/timeout -k 2 15 /bro/bin/bro -f 'ip or not ip' -C $opts trybro_pre.bro ./trybro.bro > stdout.log 2> stderr.log"
 
 #remove harmless message
 grep -v 'NB-DNS' stderr.log > tmp.log
