Add zeek forwards compatibility events.
Add events for zeek_init and zeek_done so that older versions of bro can
run newer zeek scripts as-is.

--- a/manager/runbro-1.5
+++ b/manager/runbro-1.5
@@ -17,6 +17,13 @@ const use_dpd = T;
 @load brolite
 redef log_rotate_interval = 0secs;
 redef local_nets += { 0.0.0.0/0 };
+
+@ifndef(zeek_init)
+global zeek_init: event();
+global zeek_done: event();
+event bro_init() { event zeek_init() ; }
+event bro_done() { event zeek_done() ; }
+@endif
 EOF
 
 chown nobody . *
