last round of zeekification
All filename extensions renamed to .zeek

--- a/manager/runbro-1.5
+++ b/manager/runbro-1.5
@@ -10,7 +10,7 @@ if [ -e file.pcap ]; then
 fi
 
 
-mv main.bro trybro.bro
+mv main.zeek try.bro
 
 cat <<EOF > __pre.bro
 const use_dpd = T;
@@ -29,7 +29,7 @@ EOF
 chown nobody . *
 
 su -s /bin/sh nobody -c \
-    "/usr/bin/timeout -k 2 15 /bro/bin/bro -f 'ip or not ip' -C $opts __pre.bro ./trybro.bro > stdout.log 2> stderr.log"
+    "/usr/bin/timeout -k 2 15 /bro/bin/bro -f 'ip or not ip' -C $opts __pre.bro ./try.bro > stdout.log 2> stderr.log"
 
 #remove harmless message
 grep -v 'NB-DNS' stderr.log > tmp.log
